--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^51.0.0",
+    "expo": "^53.0.9",
     "expo-constants": "~16.0.1",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.9",
@@ -19,9 +19,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-reanimated": "3.10.0",
+    "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.12.0",
     "react-native-web": "~0.19.10",
     "tailwindcss": "^3.4.0"
   },
