gesture handler is going on

--- a/app.json
+++ b/app.json
@@ -1,21 +1,43 @@
 {
   "expo": {
-    "scheme": "acme",
-    "userInterfaceStyle": "automatic",
+    "name": "isac",
+    "slug": "isac",
+    "version": "1.0.0",
     "orientation": "default",
+    "icon": "./assets/images/icon.png",
+    "scheme": "isac",
+    "userInterfaceStyle": "automatic",
+    "newArchEnabled": true,
+    "ios": {
+      "supportsTablet": true
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "backgroundColor": "#ffffff"
+      },
+      "edgeToEdgeEnabled": true
+    },
     "web": {
+      "bundler": "metro",
       "output": "static",
-      "bundler": "metro"
+      "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
+      "expo-router",
       [
-        "expo-router",
+        "expo-splash-screen",
         {
-          "origin": "https://n"
+          "image": "./assets/images/splash-icon.png",
+          "imageWidth": 200,
+          "resizeMode": "contain",
+          "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-font"
     ],
-    "name": "my-own-app",
-    "slug": "my-own-app"
+    "experiments": {
+      "typedRoutes": true
+    }
   }
 }
