--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^13.2.0",
     "@types/react": "~19.0.10",
+    "eslint-plugin-testing-library": "^7.3.0",
     "typescript": "~5.8.3"
   },
   "private": true
